# EasyVulkan-Public

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  project_structure.txt
examples/: CMakeLists.txt
examples/Triangle/: CMakeLists.txt  main.cpp
include/EasyVulkan/: Common.hpp  DataStructures.hpp
include/EasyVulkan/Builders/: BufferBuilder.hpp  CommandBufferBuilder.hpp  ComputePipelineBuilder.hpp  DescriptorSetBuilder.hpp  FramebufferBuilder.hpp  GraphicsPipelineBuilder.hpp  ImageBuilder.hpp  RenderPassBuilder.hpp  SamplerBuilder.hpp  ShaderModuleBuilder.hpp
include/EasyVulkan/Core/: CommandPoolManager.hpp  ResourceManager.hpp  SwapchainManager.hpp  SynchronizationManager.hpp  VulkanContext.hpp  VulkanDevice.hpp
include/EasyVulkan/Utils/: CommandUtils.hpp  MemoryUtils.hpp  ResourceUtils.hpp  VulkanDebug.hpp
src/: common.cpp
src/Builders/: BufferBuilder.cpp  CommandBufferBuilder.cpp  ComputePipelineBuilder.cpp  DescriptorSetBuilder.cpp  FramebufferBuilder.cpp  GraphicsPipelineBuilder.cpp  ImageBuilder.cpp  RenderPassBuilder.cpp  SamplerBuilder.cpp  ShaderModuleBuilder.cpp
src/Core/: CommandPoolManager.cpp  ResourceManager.cpp  SwapchainManager.cpp  SynchronizationManager.cpp  VmaImplementation.cpp  VulkanContext.cpp  VulkanDevice.cpp
src/Utils/: CommandUtils.cpp  MemoryUtils.cpp  ResourceUtils.cpp  VulkanDebug.cpp
